RESOLVED FIXED255613
[GStreamer][WebRTC] Opus codec mime-type is incorrect in our SDP offers
https://bugs.webkit.org/show_bug.cgi?id=255613
Summary [GStreamer][WebRTC] Opus codec mime-type is incorrect in our SDP offers
Philippe Normand
Reported 2023-04-18 10:13:19 PDT
sigh
Attachments
Philippe Normand
Comment 1 2023-04-18 10:27:15 PDT
EWS
Comment 2 2023-04-19 02:00:14 PDT
Committed 263124@main (dcdd8d4d7479): <https://commits.webkit.org/263124@main> Reviewed commits have been landed. Closing PR #12873 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-04-19 02:01:18 PDT
Note You need to log in before you can comment on or make changes to this bug.