[GStreamer][WebRTC] Opus codec mime-type is incorrect in our SDP offers https://bugs.webkit.org/show_bug.cgi?id=255613

Reviewed by Xabier Rodriguez-Calvar.

RFC 7587 section 7 stipulates the m= line for Opus payloads should use the "opus" media sub-type,
not OPUS.

* LayoutTests/platform/glib/fast/mediastream/RTCPeerConnection-inspect-answer-expected.txt:
* LayoutTests/platform/glib/fast/mediastream/RTCPeerConnection-inspect-offer-expected.txt:
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/media-capabilities/decodingInfo.webrtc-expected.txt:
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/media-capabilities/encodingInfo.webrtc-expected.txt:
* Source/WebCore/platform/graphics/gstreamer/GStreamerRegistryScanner.cpp:
(WebCore::GStreamerRegistryScanner::fillAudioRtpCapabilities):

Canonical link: https://commits.webkit.org/263124@main